infra/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dolesewonderlandfx
  labels:
    name: dolesewonderlandfx
