infra/kubernetes/base/nginx-ssl-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ssl-proxy
  namespace: dolesewonderlandfx
  labels:
    app: nginx-ssl-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ssl-proxy
  template:
    metadata:
      labels:
        app: nginx-ssl-proxy
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: ssl-certs
          mountPath: /etc/ssl/certs
        - name: ssl-private
          mountPath: /etc/ssl/private
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-ssl-config
      - name: ssl-certs
        secret:
          secretName: ssl-cert
      - name: ssl-private
        secret:
          secretName: ssl-cert
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ssl-proxy
  namespace: dolesewonderlandfx
  labels:
    app: nginx-ssl-proxy
spec:
  selector:
    app: nginx-ssl-proxy
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
  type: NodePort
